# HillsInspector

./: .cursorrules  .gitignore  AAPROMPTS.md  AGENT.md  AGENTS.md  BULK_DATA.md  CLAUDE.md  CODEX_update.md  Controller.py  DB_ISSUES.md  ENDPOINTS.md  ERRORS.md  FILE_RESTRUCTURING.md  LEARNED.md  LOGGING_FIXES.md  MASTERPLAN.md  MAYBE.md  MAYBE2.md  MAYBE3.md  Makefile  NEW2.md  ONLINE_LISTS.md  PROMPTS_GOOD.md  Prompt_Refactor.md  README.md  SILENT_FAILS.md  STEPS.md  TODO.md  Zillow_Alternatives.md  alembic.ini  calendar_page.html  check_db_status.py  claude_knowledge.txt  data_store.py  database_report.txt  debug_auction_item.html  debug_empty_date.py  debug_hcpa_details.html  debug_hcpa_result.html  debug_history_new.html  (+41 more)
.agent/rules/: javascript.md
.agent/workflows/: extract_judgments.md  run_pipeline.md  run_web.md
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.git-rewrite/: backup-refs  commit  heads  index  message  parse  raw-refs  revs
.serena/: project.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_viewify_foreclosures_history.py  002_add_pipeline_job_control.py  003_seed_additional_scheduled_jobs.py  004_merge_civil_alpha_index.py  005_drop_clerk_name_index.py  006_seed_bulk_scheduled_jobs.py  007_add_modifies_encumbrance_id.py  008_add_municipal_lien_findings.py  009_add_foreclosure_encumbrance_survival.py  010_update_survival_pg_functions.py  011_data_quality.py  012_add_identifier_recovery_step.py  013_rename_mortgage_data_to_extracted_data.py  014_add_raw_ocr_column.py
app/: database.py  main.py  mcp_server.py  server.py  ui.py
app/services/: analyzer.py  classify_images_fast.py  ocr.py  scraper.py
app/web/: __init__.py  database.py  exceptions.py  main.py  pg_database.py  pg_web.py  template_filters.py
archive/: DEEP_SEARCH_IMPLEMENTATION.md  FINAL_JUDGMENT_EXTRACTION.md  FINAL_JUDGMENT_TEST_RESULTS.md  FULL_PIPELINE_INTEGRATION_PLAN.md  SESSION_SUMMARY.md  WEB_INTERFACE_PROGRESS.md  data_sources_OLD.md
config/: generic_names.txt  market_photo_first_schema.json  step4v2.py
docs/: 2ndparty.md  AUDIT_FIXES_2026_03_08.md  AUDIT_FIXES_2026_03_08_FINAL.md  AUDIT_FIXES_2026_03_10.md  CASE_FALLBACK.md  CHAIN_OF_TITLE_STRATEGY.md  CLERK_CIVIL_ALPHA_MERGE.md  DATA_VALIDATION.md  ENCUMBRANCE_ALGORITHM_RESULTS.md  ENCUMBRANCE_ALGORITHM_TESTPLAN.md  Failed_web.md  FinalJudgement.md  INGESTION_GUIDE.md  LIEN_SURVIVAL_STRATEGY.md  LIEN_SURVIVAL_STRATEGY2.md  LegalIssues.md  Legal_Descriptions.md  MASSIVE_AUDIT.md  ONBASE_FINDINGS.md  PAST.md  PERMIT_PIPELINE_DIAGNOSTICS.md  PG_Schema.md  PIPELINE_SCRAPING_AUDIT.md  POSTGRES_REFERENCE.md  Production_Fixes.md  RUNBOOK.md  STILL.md  TAMPA_PERMIT_ACCELA_FAILURE_2026-02-23.md  TAX_DATA_RESEARCH.md  TITLE_CHAIN_RECOVERY.md  TODO.md  architecture.md  async.md  brainstorm.md  codex_fixing.md  data_sources.md  deep_analysis_disk_io_errors.md  implementation_plan.md  legalSearchdirect.md  no_folio.md  (+7 more)
docs/architecture/: DATABASE_SCHEMA.md
docs/archive/: 01_5_tax_deed_auctions.md  05_ori_ingestion_v2_DEPRECATED_DUCKDB.md  CLERK_CIVIL_ALPHA_MERGE.md  DATA_FLOW_FIX_WALKTHROUGH.md  FORECLOSURE_IDENTIFIER_REPAIR.md  LEGAL_TEST.md  MESSEDUP.md  ORI_LIS_PENDENS_RECOVERY.md  STATUS.md  TAMPA_PERMIT_VALUE_AND_ENFORCEMENT.md  TaxDeed.md  legal_test_cases.json  mortgage_ocr.md  (+3 more)
dotfiles/: claude-CLAUDE.md
logs/: auction_page_11-27-2025.html  auction_page_11-28-2025.html  auction_page_11-29-2025.html  auction_page_11-30-2025.html  debug_body.html  update_run_2025-12-22.out
pipelinev2/: __init__.py  logging.py  runner.py  services.py  state.py
scripts/: __init__.py  analyze_hcpa_pdf.py  auction_com_workflow.py  audit_database.py  backfill_missing_chain_docs.py  backfill_mortgage_ori_id.py  batch_extract_judgments.py  benchmark_encumbrance_algorithms.py  build_history_db_from_hills_benchmark.py  check_schema.py  cleanup_bad_documents.py  cleanup_old_files.py  db_audit.py  debug_ori_search.py  debug_pipeline_logic.py  debug_step6.py  debug_tax_deed.py  deep_scan_hover.py  download_missing_photos.py  enrich_dec15.py  fix_history_data.py  fix_status.sql  hills_benchmark_extract.py  inspect_data_quality.py  migrate_party2_fields.py  patch_db.py  rebuild_chain_1932.py  rebuild_chains_from_db.py  rebuild_chains_from_ori.py  rebuild_from_properties.py  redownload_missing_judgments.py  refresh_foreclosures.py  reprocess_missing_chains.py  reset_ori_for_zero_mortgages.py  reset_problematic_properties.py  run_homeharvest_enrichment.py  run_market_photos.py  run_step5_ori.py  save_tuscany_documents.py  scrape_sales_1932.py  (+19 more)
src/: __init__.py  ai_client.py  database.py  models.py  orchestrator.py  pipeline.py  pipeline_OLD.py  vision_services.py
sunbiz/: README.md  __init__.py  db.py  models.py  pg_loader.py  sync.py
tests/: __init__.py  sanity_step6v2.py  test_bulk_step_worker.py  test_connections_api.py  test_controller_step_dispatcher.py  test_database_view.py  test_db_audit.py  test_encumbrance_audit_service.py  test_encumbrance_audit_signals.py  test_encumbrance_extraction_service.py  test_encumbrance_recovery.py  test_extraction_models.py  test_final_judgment_processor.py  test_foreclosure_identifier_repair_sql.py  test_legal_parser.py  test_lien_survival_service.py  test_logging_config.py  test_main.py  test_market_data_dispatcher.py  test_market_data_service.py  test_market_data_worker.py  test_nal_millage_fallback.py  test_permit_pipeline_guardrails.py  test_pg_auction_service.py  test_pg_encumbrance_audit.py  test_pg_encumbrance_relationship_service.py  test_pg_foreclosure_identifier_recovery_service.py  test_pg_foreclosure_service.py  test_pg_job_control_service.py  test_pg_judgment_service.py  test_pg_loader_clerk.py  test_pg_market_data_scrapling.py  test_pg_mortgage_extraction_service.py  test_pg_municipal_lien_service.py  test_pg_ori_service.py  test_pg_permit_single_pin_service.py  test_pg_pipeline_controller_audit_recovery.py  test_pg_pipeline_controller_bulk_dispatch.py  test_pg_pipeline_controller_degraded.py  test_pg_pipeline_controller_market_data.py  (+27 more)
(+367 files in other folders)
