[project]
name = "hillsborough-property-data"
version = "0.1.0"
description = "A tool to acquire and analyze property data from Hillsborough County."
dependencies = [
    "ruff",
    "typer[all]",
    "playwright",
    "lxml",
    "pytest",
]
requires-python = ">=3.12"

[tool.setuptools]
py_modules = ["main", "data_store"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
]

[tool.ruff.format]
quote-style = "double"
