[project]
name = "hillsborough-property-data"
version = "0.1.0"
description = "A tool to acquire and analyze property data from Hillsborough County."
dependencies = [
    "ruff",
    "typer[all]",
    "playwright",
    "lxml",
    "pytest",
    "fastapi",
    "uvicorn",
    "mcp",
    "requests",
    "json-repair",
    "numpy",
    "Pillow",
    "pydantic",
    "beautifulsoup4",
    "pandas",
    "tenacity",
    "loguru>=0.7.3",
    "ty>=0.0.1a27",
    "dbfread>=2.0.7",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pymupdf>=1.26.6",
    "playwright-stealth>=2.0.0",
    "pypdfium2>=5.1.0",
    "markitdown[pdf]>=0.1.4",
    "redfin>=0.1.1",
    "pyngrok>=7.5.0",
    "homeharvest>=0.8.11",
    "jinja2>=3.1.6",
    "rapidfuzz>=3.14.3",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.12,<3.13"

[tool.setuptools]
py_modules = ["main", "data_store"]

# ==============================================================================
# Ruff Configuration - Linting and Formatting
# ==============================================================================
[tool.ruff]
line-length = 88

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "*.egg",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    # "I",     # isort - DISABLED BY USER (no import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "YTT",   # flake8-2020
    "ASYNC", # flake8-async
    "S",     # flake8-bandit (security)
    "BLE",   # flake8-blind-except
    "FBT",   # flake8-boolean-trap
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "EXE",   # flake8-executable
    "FA",    # flake8-future-annotations
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "LOG",   # flake8-logging
    "G",     # flake8-logging-format
    "INP",   # flake8-no-pep420
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "SLOT",  # flake8-slots
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "TD",    # flake8-todos
    "FIX",   # flake8-fixme
    "ERA",   # eradicate (commented-out code)
    "PD",    # pandas-vet
    "PGH",   # pygrep-hooks
    "PL",    # pylint
    "TRY",   # tryceratops
    "FLY",   # flynt (string formatting)
    "NPY",   # numpy-specific rules
    "PERF",  # perflint (performance)
    "FURB",  # refurb (modernization)
    "RUF",   # ruff-specific rules
]

# Ignore specific rules that conflict with project style
ignore = [
    "E501",    # Line too long (handled by formatter) - REQUESTED BY USER
    "E302",    # Expected 2 blank lines - REQUESTED BY USER
    "E303",    # Too many blank lines - REQUESTED BY USER
    "E304",    # Blank lines after function decorator - REQUESTED BY USER
    "E305",    # Expected 2 blank lines after function/class - REQUESTED BY USER
    "E306",    # Expected 1 blank line before nested definition - REQUESTED BY USER
    "W291",    # Trailing whitespace
    "W293",    # Blank line contains whitespace - REQUESTED BY USER
    "Q000",    # Single quotes found but double quotes preferred - REQUESTED BY USER
    "Q001",    # Single quote multiline found but double quotes preferred
    "Q002",    # Single quote docstring found but double quotes preferred
    "Q003",    # Avoidable escaped quote
    "COM812",  # Trailing comma missing (conflicts with formatter)
    "COM818",  # Trailing comma on bare tuple prohibited - REQUESTED BY USER
    "ISC001",  # Single line implicit string concatenation (conflicts with formatter)

    # Modern Python type hints (prefer old style for compatibility) - REQUESTED BY USER
    "UP045",   # Use X | None instead of Optional[X]
    "UP006",   # Use list instead of List
    "UP035",   # typing.List is deprecated, use list instead

    # Import style preferences - REQUESTED BY USER
    "TID252",  # Prefer absolute imports over relative imports
    "PLC0415", # Import should be at top-level of file

    # Code style preferences - REQUESTED BY USER
    "F541",    # f-string without any placeholders
    "TRY400",  # Use logging.exception instead of logging.error (loguru works differently)
    "ERA001",  # Found commented-out code - REQUESTED BY USER
    "EXE001",  # Shebang present but file not executable - REQUESTED BY USER

    # Security exceptions (review these carefully)
    "S101",    # Use of assert (common in tests)
    "S608",    # Possible SQL injection (we use parameterized queries)

    # Style preferences
    "EM101",   # Exception must not use string literal
    "EM102",   # Exception must not use f-string literal
    "TRY003",  # Avoid specifying long messages outside exception class

    # Complexity rules (too strict for data science code)
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0914", # Too many local variables - REQUESTED BY USER
    "PLR0915", # Too many statements
    "PLR1702", # Too many nested blocks - REQUESTED BY USER
    "PLR2004", # Magic value used in comparison

    # Type checking (gradually enable these)
    "PGH003",  # Use specific rule codes when ignoring type issues

    # Polars naming preference
    # "PD901",   # Allow generic DataFrame variable names, I guess we removed them somewhere else

    # Allow print statements (this is a CLI tool)
    "T201",    # Print found

    # Legacy code compatibility
    "FBT001",  # Boolean positional arg in function definition
    "FBT002",  # Boolean default value in function definition
    "ARG001",  # Unused function argument (common in callbacks)
    "ARG002",  # Unused method argument

    # Logging and exception handling (project style)
    "G004",    # Logging statement uses f-string (acceptable for performance)
    "BLE001",  # Blind except Exception (we log exceptions properly)
    "TRY300",  # Consider moving statement to else block
    "TRY301",  # Raise within try block
    "TRY401",  # Verbose log message (redundant exception info)

    # Path operations (gradual migration to pathlib)
    "PTH118",  # os.path.join (migrating to pathlib gradually)
    "PTH110",  # os.path.exists
    "PTH123",  # builtin open
    "PTH107",  # os.remove
    "PTH119",  # os.path.basename
    "PTH120",  # os.path.dirname
    "PTH122",  # os.path.splitext
    "PTH112",  # os.path.isdir
    "PTH113",  # os.path.isfile
    "PTH208",  # os.listdir
    "PTH204",  # os.path.getmtime
    "PTH103",  # os.makedirs
    "PTH116",  # os.stat
    "PTH202",  # os.path.getsize

    # TODO comments (tracked in GitHub Issues)
    "FIX002",  # Line contains TODO
    "TD002",   # Missing TODO author
    "TD003",   # Missing TODO link
    "TD004",   # Missing TODO colon

    # Performance (gradual optimization)
    "PERF401", # Manual list comprehension

    # Other style choices
    "N806",    # Non-lowercase variable in function (some constants)
    "N817",    # CamelCase imported as acronym (DDP is standard PyTorch convention)
    "PLW0603", # Global statement (used for singletons)
    "PLW0602", # Global variable not assigned
    "PLW2901", # Loop variable overwritten (intentional in image processing)
    "RUF012",  # Mutable class default (intentional dataclass usage)
    "RUF001",  # Ambiguous unicode character (emoji used intentionally)
    "E701",    # Multiple statements on one line colon
    "E702",    # Multiple statements on one line semicolon
    "SIM117",  # Multiple with statements
    "G003",    # Logging string concatenation (minimal occurrences)

    # Datetime (timezone aware datetime not needed for local timestamps)
    "DTZ005",  # datetime.now without tz (local timestamps)
    "DTZ007",  # datetime.strptime without zone (parsing local times)

    # Security exceptions (justified use cases)
    "S104",    # Binding to all interfaces (web server needs 0.0.0.0 for docker)
    "S202",    # tarfile.extractall (extracting trusted archives)
    "S324",    # MD5 hash (used for file checksums, not security)
    "S603",    # subprocess without shell check (using list format safely)

    # Async/FastAPI patterns
    "ASYNC230", # Blocking file operations in async (acceptable for small files)
    "B008",     # Function call in default argument (FastAPI Form pattern)

    # Exception handling
    "TRY203",  # Useless try-except that re-raises (used for cleanup in finally)
    "TRY002",  # Raise vanilla exception (custom exceptions not needed everywhere)
]

# Allow autofix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*.py" = ["PLR2004", "S101", "TID252"]
# Scripts can use print statements
"scripts/**/*.py" = ["T201"]
# Config files can have unused imports and imports after try/except
"config.py" = ["F401", "E402"]
"__init__.py" = ["F401"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = true
lines-after-imports = 2
known-first-party = ["config", "database", "db", "services", "tui", "util", "utils", "web", "workflows"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 8
max-statements = 60

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

# ==============================================================================
# ty Configuration - Astral Type Checker (Pre-Alpha)
# ==============================================================================
[tool.ty]
# ty is pre-alpha, so we're lenient with edge cases while catching real bugs

[tool.ty.rules]
# Ignore optional type strictness (similar to pyrightconfig.json approach)
# These mirror pyright's reportOptional* settings which are set to "none"
unresolved-attribute = "ignore"           # Like reportOptionalMemberAccess
possibly-missing-attribute = "ignore"     # Member might not exist
unsupported-operator = "ignore"           # Like reportOptionalOperand
not-iterable = "ignore"                   # Like reportOptionalIterable

# Ignore import/reference issues (often from .venv or optional deps)
unresolved-import = "ignore"              # Can't resolve module
unresolved-reference = "ignore"           # Can't resolve name
possibly-unresolved-reference = "ignore"  # Reference might not exist

# Ignore code quality warnings (focus on bugs)
redundant-cast = "ignore"                 # Unnecessary type casts
deprecated = "ignore"                     # Using deprecated APIs

# Keep these as ERRORS to catch real bugs (these are defaults, listed for clarity):
# invalid-assignment = "error"            # Type mismatches
# invalid-argument-type = "error"         # Wrong argument types
# invalid-return-type = "error"           # Return type mismatches
# division-by-zero = "error"              # Potential division by zero
# index-out-of-bounds = "error"           # Array index errors

# Note: invalid-syntax errors are not configurable in ty pre-alpha
# These are parser-level issues that will be fixed as ty matures

# ==============================================================================
# MyPy Configuration - Type Checking
# ==============================================================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Enable gradually
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

# ==============================================================================
# Pytest Configuration
# ==============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=db",
    "--cov=services",
    "--cov=tui",
    "--cov=utils",
    "--cov=web",
    "--cov=workflows",
    "--cov=main",
    "--cov=config",
    "--cov=database",
    "--cov=util",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
]
